# pydl

./: .cargo-crap.toml  .devtool.yaml  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  DEV.md  ISSUES.md  MAINTENANCE.md  README.md  TODO.md  cliff.toml  dev.ps1  dev.sh  install.ps1  install.sh  rustfmt.toml
.github/workflows/: changelog.yaml  check-checksums.yml  ci.yaml  release.yaml
check-checksums/: Cargo.toml  README.md
check-checksums/src/: main.rs
checksums/: 20220227.sha256sums  20220318.sha256sums  20220502.sha256sums  20220528.sha256sums  20220630.sha256sums  20220802.sha256sums  20221002.sha256sums  20221106.sha256sums  20221220.sha256sums  20230116.sha256sums  20230507.sha256sums  20230726.sha256sums  20230826.sha256sums  20231002.sha256sums  20240107.sha256sums  20240224.sha256sums  20240415.sha256sums  20240713.sha256sums  20240725.sha256sums  20240726.sha256sums  20240814.sha256sums  20240909.sha256sums  20241002.sha256sums  20241008.sha256sums  20241016.sha256sums  20241205.sha256sums  20241206.sha256sums  20241219.sha256sums  20250106.sha256sums  20250115.sha256sums  20250205.sha256sums  20250212.sha256sums  20250311.sha256sums  20250317.sha256sums  20250323.sha256sums  20250409.sha256sums  20250517.sha256sums  20250521.sha256sums  20250529.sha256sums  20250604.sha256sums  (+40 more)
get-checksums/: Cargo.toml  README.md
get-checksums/src/: main.rs
pydl/: Cargo.toml  README.md  build.rs
pydl-cache/: Cargo.toml  DEV.md  README.md
pydl-cache/src/: client.rs  entry.rs  freshness.rs  lib.rs  rate_limit.rs  stream.rs
pydl-common/: Cargo.toml  build.rs
pydl-common/src/: asset.rs  checksums.rs  config.rs  filter.rs  format.rs  install.rs  lib.rs  platform.rs  snapshot.rs
pydl/src/: main.rs  progress.rs
pydl/src/cmd/: available.rs  cache.rs  completions.rs  download.rs  install.rs  installed.rs  mod.rs  pin.rs  python.rs  self_update.rs  status.rs  uninstall.rs  update.rs
