[workspace]
resolver = "2"
members = [
    "pydl",
    "pydl-cache",
    "pydl-common",
    "get-checksums",
    "check-checksums",
]

[workspace.package]
edition = "2024"
version = "0.1.1"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Doc lints are noise for an internal workspace; re-enable per-crate if the
# library is ever published.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
env_logger = "0.11"
flate2 = "1"
httpdate = "1"
log = "0.4"
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
tempfile = "3"
wiremock = "0.6"
zstd = "0.13"
