[workspace]
resolver = "2"
members = [
    "pydl",
    "pydl-cache",
    "pydl-common",
]

[workspace.package]
edition = "2024"
version = "0.1.24"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Doc lints are noise for an internal workspace; re-enable per-crate if the
# library is ever published.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dunce = "1"
env_logger = "0.11"
flate2 = "1"
httpdate = "1"
log = "0.4"
bytes = "1"
futures-util = "0.3"
indicatif = "0.18"
reqwest = { version = "0.13.3", default-features = false, features = ["stream", "rustls", "http2", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"
tempfile = "3"
wiremock = "0.6"
zstd = "0.13"
self-replace = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
semver = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
