[package]
name = "check-checksums"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
pydl-cache = { path = "../pydl-cache" }
pydl-common = { path = "../pydl-common" }
tokio = { workspace = true }
