[package]
name = "pydl-cache"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
httpdate = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["net"] }
wiremock = { workspace = true }
