[package]
name = "pydl-common"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
pydl-cache = { path = "../pydl-cache" }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
