[package]
name = "pydl-common"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lints]
workspace = true

[[bin]]
name = "get-checksums"
path = "src/bin/get_checksums.rs"

[[bin]]
name = "check-checksums"
path = "src/bin/check_checksums.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
pydl-cache = { path = "../pydl-cache" }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
